--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
     <h1>Home</h1>
-    <p>Welcome to the home page.</p>
+    <p>Welcome to the home page. I am a turtle.</p>
 </body>
 </html>
