Created main outline of website

--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Home</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home - Holden Mui</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Home</h1>
-    <p>Welcome to the home page. I am a turtle.</p>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="research.html">Research</a></li>
+                <li><a href="writing.html">Writing</a></li>
+                <li><a href="piano.html">Piano</a></li>
+                <li><a href="composition.html">Composition</a></li>
+                <li><a href="olympiad.html">Olympiad</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h1>Hi!</h1>
+        <p>I'm Holden, a mathematics and music major at MIT. I hope you like this website I made!</p>
+        <img src="images/turtles.jpg" alt="Profile Picture">
+    </main>
 </body>
 </html>
