style: reformat HTML files

--- a/composition.html
+++ b/composition.html
@@ -1,37 +1,62 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Compositions - Holden Mui</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="research.html">Research</a></li>
-                <li><a href="writing.html">Writing</a></li>
-                <li><a href="piano.html">Piano</a></li>
-                <li><a href="composition.html">Composition</a></li>
-                <li><a href="olympiad.html">Olympiad</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="research.html">Research</a></li>
+          <li><a href="writing.html">Writing</a></li>
+          <li><a href="piano.html">Piano</a></li>
+          <li><a href="composition.html">Composition</a></li>
+          <li><a href="olympiad.html">Olympiad</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
-        <h1>Compositions</h1>
-        <p>Here is a selection of my musical compositions. If you are interested in recording them, please let me know!</p>
-        <ul>
-            <li><a href="files/poetry.pdf" target="_blank">Poetry</a>, for solo piano</li>
-            <li><a href="files/pursuit.pdf" target="_blank">Pursuit</a>, for chamber orchestra</li>
-            <li><a href="files/trio.pdf" target="_blank">Trio</a>, for piano trio</li>
-            <li><a href="files/landscapes.pdf" target="_blank">Landscapes</a>, for string orchestra</li>
-            <li><a href="files/serenadeandtoccata.pdf" target="_blank">Serenade and Toccata</a>, for solo piano</li>
-            <li><a href="files/underwateradventures.pdf" target="_blank">Underwater Adventures</a>, for violin and piano</li>
-            <li><a href="files/preludeandfugue.pdf" target="_blank">Prelude and Fugue</a>, for solo keyboard</li>
-        </ul>
+      <h1>Compositions</h1>
+      <p>
+        Here is a selection of my musical compositions. If you are interested in
+        recording them, please let me know!
+      </p>
+      <ul>
+        <li>
+          <a href="files/poetry.pdf" target="_blank">Poetry</a>, for solo piano
+        </li>
+        <li>
+          <a href="files/pursuit.pdf" target="_blank">Pursuit</a>, for chamber
+          orchestra
+        </li>
+        <li>
+          <a href="files/trio.pdf" target="_blank">Trio</a>, for piano trio
+        </li>
+        <li>
+          <a href="files/landscapes.pdf" target="_blank">Landscapes</a>, for
+          string orchestra
+        </li>
+        <li>
+          <a href="files/serenadeandtoccata.pdf" target="_blank"
+            >Serenade and Toccata</a
+          >, for solo piano
+        </li>
+        <li>
+          <a href="files/underwateradventures.pdf" target="_blank"
+            >Underwater Adventures</a
+          >, for violin and piano
+        </li>
+        <li>
+          <a href="files/preludeandfugue.pdf" target="_blank"
+            >Prelude and Fugue</a
+          >, for solo keyboard
+        </li>
+      </ul>
     </main>
-</body>
+  </body>
 </html>
