--- a/index.html
+++ b/index.html
@@ -1,29 +1,32 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home - Holden Mui</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="research.html">Research</a></li>
-                <li><a href="writing.html">Writing</a></li>
-                <li><a href="piano.html">Piano</a></li>
-                <li><a href="composition.html">Composition</a></li>
-                <li><a href="olympiad.html">Olympiad</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="research.html">Research</a></li>
+          <li><a href="writing.html">Writing</a></li>
+          <li><a href="piano.html">Piano</a></li>
+          <li><a href="composition.html">Composition</a></li>
+          <li><a href="olympiad.html">Olympiad</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
-        <h1>Hi!</h1>
-        <p>I'm Holden, a mathematics and music major at MIT. I hope you like this website I made!</p>
-        <img src="images/turtles.jpg" alt="Profile Picture">
+      <h1>Hi!</h1>
+      <p>
+        I'm Holden, a mathematics and music major at MIT. I hope you like this
+        website I made!
+      </p>
+      <img src="images/turtles.jpg" alt="Profile Picture" />
     </main>
-</body>
+  </body>
 </html>
