--- a/research.html
+++ b/research.html
@@ -1,62 +1,91 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Research - Holden Mui</title>
-        <link rel="stylesheet" href="style.css">
-        <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-        <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-    </head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Research - Holden Mui</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script
+      id="MathJax-script"
+      async
+      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
+    ></script>
+  </head>
+  <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="research.html">Research</a></li>
-                <li><a href="writing.html">Writing</a></li>
-                <li><a href="piano.html">Piano</a></li>
-                <li><a href="composition.html">Composition</a></li>
-                <li><a href="olympiad.html">Olympiad</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="research.html">Research</a></li>
+          <li><a href="writing.html">Writing</a></li>
+          <li><a href="piano.html">Piano</a></li>
+          <li><a href="composition.html">Composition</a></li>
+          <li><a href="olympiad.html">Olympiad</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
-        <h1>Research Projects</h1>
-        <ul class="research-list">
-            <li>
-                <a href="https://arxiv.org/abs/2401.01457">Flip Graphs on Self-Complementary Ideals of Chain Products (with Serena An)</a>
-                <p>In this paper, we introduce a flip operation on self-complementary ideals of chain product posets and
-                    study the resulting flip graphs. We give asymptotics for the number of vertices in these graphs,
-                    compute their diameters, and give bounds for their radii. We also define similar flip operations on
-                    self-complementary ideals of the chain product \([2r] \times [2r] \times [2r]\) satisfying additional symmetries, and
-                    we achieve similar results for the resulting flip graphs.</p>
-            </li>
-            <li>
-                <a href="https://math.mit.edu/research/undergraduate/spur/documents/2022/Mui_Slusarczyk.pdf">The Upper Tail of Cycle Distributions in Sparse Erdős-Rényi
-                    Random Graphs (with Tomasz Ślusarczyk)</a>
-                <p>The distribution of subgraph counts in Erdős-Réyni random graphs is of great interest
-                    in extremal combinatorics. In this paper, we analyze the upper tail of the \(k\)-cycle count in the
-                    sparse (constant-degree) regime for fixed \(k\), in the limit as the number of vertices tends to infinity.
-                    We provide asymptotically sharp bounds for the probability the graph contains a large number of
-                    \(k\)-cycles via a coring argument; the logarithmic probability of containing \(t\) cycles is asymptotically
-                    equal to the logarithmic probability of containing \(t\) disjoint \(k\)-cycles or containing a clique with \(t\)
-                    cycles.</p>
-            </li>
-            <li>
-                <a href="https://arxiv.org/abs/2102.07329">Symmetric Operations on Domains of Size at Most 4</a>
-                <p>To convert a fractional solution to an instance of a constraint satisfaction problem into a solution,
-                    a rounding scheme is needed, which can be described by a collection of symmetric operations with one of
-                    each arity. An intriguing possibility, raised in a recent paper by Carvalho and Krokhin, would imply
-                    that any clone of operations on a set D which contains symmetric operations of arities \(1, 2, \ldots, \lvert D \rvert\)
-                    contains symmetric operations of all arities in the clone. If true, then it is possible to check whether
-                    any given family of constraint satisfaction problems is solved by its linear programming relaxation.
-                    We characterize all idempotent clones containing symmetric operations of arities \(1,2,\ldots,|D|\)
-                    for all sets \(D\) with size at most four and prove that each one contains symmetric operations of
-                    every arity, proving the conjecture above for \(\lvert D \rvert \leq 4\).</p>
-            </li>
-        </ul>
+      <h1>Research Projects</h1>
+      <ul class="research-list">
+        <li>
+          <a href="https://arxiv.org/abs/2401.01457"
+            >Flip Graphs on Self-Complementary Ideals of Chain Products (with
+            Serena An)</a
+          >
+          <p>
+            In this paper, we introduce a flip operation on self-complementary
+            ideals of chain product posets and study the resulting flip graphs.
+            We give asymptotics for the number of vertices in these graphs,
+            compute their diameters, and give bounds for their radii. We also
+            define similar flip operations on self-complementary ideals of the
+            chain product \([2r] \times [2r] \times [2r]\) satisfying additional
+            symmetries, and we achieve similar results for the resulting flip
+            graphs.
+          </p>
+        </li>
+        <li>
+          <a
+            href="https://math.mit.edu/research/undergraduate/spur/documents/2022/Mui_Slusarczyk.pdf"
+            >The Upper Tail of Cycle Distributions in Sparse Erdős-Rényi Random
+            Graphs (with Tomasz Ślusarczyk)</a
+          >
+          <p>
+            The distribution of subgraph counts in Erdős-Réyni random graphs is
+            of great interest in extremal combinatorics. In this paper, we
+            analyze the upper tail of the \(k\)-cycle count in the sparse
+            (constant-degree) regime for fixed \(k\), in the limit as the number
+            of vertices tends to infinity. We provide asymptotically sharp
+            bounds for the probability the graph contains a large number of
+            \(k\)-cycles via a coring argument; the logarithmic probability of
+            containing \(t\) cycles is asymptotically equal to the logarithmic
+            probability of containing \(t\) disjoint \(k\)-cycles or containing
+            a clique with \(t\) cycles.
+          </p>
+        </li>
+        <li>
+          <a href="https://arxiv.org/abs/2102.07329"
+            >Symmetric Operations on Domains of Size at Most 4</a
+          >
+          <p>
+            To convert a fractional solution to an instance of a constraint
+            satisfaction problem into a solution, a rounding scheme is needed,
+            which can be described by a collection of symmetric operations with
+            one of each arity. An intriguing possibility, raised in a recent
+            paper by Carvalho and Krokhin, would imply that any clone of
+            operations on a set D which contains symmetric operations of arities
+            \(1, 2, \ldots, \lvert D \rvert\) contains symmetric operations of
+            all arities in the clone. If true, then it is possible to check
+            whether any given family of constraint satisfaction problems is
+            solved by its linear programming relaxation. We characterize all
+            idempotent clones containing symmetric operations of arities
+            \(1,2,\ldots,|D|\) for all sets \(D\) with size at most four and
+            prove that each one contains symmetric operations of every arity,
+            proving the conjecture above for \(\lvert D \rvert \leq 4\).
+          </p>
+        </li>
+      </ul>
     </main>
-</body>
+  </body>
 </html>
