feat: Add hyperlinks

--- a/olympiad.html
+++ b/olympiad.html
@@ -33,7 +33,11 @@
         the problems I've written.
       </p>
       <div class="problem-box">
-        <h2>2024 TSTST Problem 5</h2>
+        <h2>
+          <a href="https://aops.com/community/p31007010"
+            >2024 TSTST Problem 5</a
+          >
+        </h2>
         <p>
           Let \(n\) be a positive integer. Prove that among the first \(n\)
           multiples of three, there are more numbers with an even number of 1s
@@ -42,7 +46,11 @@
       </div>
 
       <div class="problem-box">
-        <h2>2023 MPfG Olympiad Problem 4</h2>
+        <h2>
+          <a href="https://aops.com/community/p29323732"
+            >2023 MPfG Olympiad Problem 4</a
+          >
+        </h2>
         <p>
           Let \(O = (0,0)\) and call a lattice triangle \(ABC\)
           <em>marine</em> if \([ABO] = [BCO] = [CAO] = \frac{1}{2}\). Find all
@@ -63,7 +71,11 @@
       </div>
 
       <div class="problem-box">
-        <h2>2023 USEMO Problem 2</h2>
+        <h2>
+          <a href="https://aops.com/community/p28992221"
+            >2023 USEMO Problem 2</a
+          >
+        </h2>
         <p>
           Each point in the plane is labeled with a real number. Prove that
           there exist two distinct points \(P\) and \(Q\) such that their labels
@@ -72,7 +84,11 @@
       </div>
 
       <div class="problem-box">
-        <h2>2023 TSTST Problem 9</h2>
+        <h2>
+          <a href="https://aops.com/community/p28015688"
+            >2023 TSTST Problem 9</a
+          >
+        </h2>
         <p>
           For every pair of integers \(a, b \in \mathbb{Z}^+\) and function \(f:
           \mathbb{Z}/a\mathbb{Z} \to \mathbb{Z}/b\mathbb{Z}\), let \(\Delta f :
@@ -85,7 +101,11 @@
       </div>
 
       <div class="problem-box">
-        <h2>2023 TSTST Problem 6</h2>
+        <h2>
+          <a href="https://aops.com/community/p28015708"
+            >2023 TSTST Problem 6</a
+          >
+        </h2>
         <p>
           Let distinct points \(P\) and \(Q\) lie inside scalene triangle
           \(ABC\). Suppose that the angle bisectors of \(\angle PAQ\), \(\angle
@@ -125,7 +145,11 @@
         </p>
       </div>
       <div class="problem-box">
-        <h2>2023 USAMO Problem 3 / USAJMO Problem 3</h2>
+        <h2>
+          <a href="https://aops.com/community/p27349464"
+            >2023 USAMO Problem 3 / USAJMO Problem 3</a
+          >
+        </h2>
         <p>
           Fix an odd integer \(n\), and place \(\frac{1}{2}(n^2-1)\)
           nonoverlapping dominoes in an \(n \times n\) grid. Let \(k\) be the
@@ -135,7 +159,11 @@
       </div>
 
       <div class="problem-box">
-        <h2>2023 USAMO Problem 1 / USAJMO Problem 2</h2>
+        <h2>
+          <a href="https://aops.com/community/p27349297"
+            >2023 USAMO Problem 1 / USAJMO Problem 2</a
+          >
+        </h2>
         <p>
           The foot from \(C\) to the \(A\)-median of triangle \(ABC\) is \(P\),
           and the circumcircle of triangle \(ABP\) meets \(\overline{BC}\) again
@@ -161,7 +189,11 @@
       </div>
 
       <div class="problem-box">
-        <h2>2022 USEMO Problem 1</h2>
+        <h2>
+          <a href="https://aops.com/community/p26373095"
+            >2022 USEMO Problem 1</a
+          >
+        </h2>
         <p>
           Define a <em>width-one strip</em> to be a rectangle with width 1 or
           height 1. An \(n \times n\) square is dissected into width-one strips
@@ -171,7 +203,11 @@
       </div>
 
       <div class="problem-box">
-        <h2>2022 TSTST Problem 1</h2>
+        <h2>
+          <a href="https://youtu.be/dQw4w9WgXcQ?si=cT_lF53Sot7DCSwr"
+            >2022 TSTST Problem 1</a
+          >
+        </h2>
         <p>
           In terms of \(n \in \mathbb{Z}^+\), find the smallest integer \(k\)
           for which \((0, 1)^2 \setminus S\) is a union of \(k\) axis-aligned
@@ -188,7 +224,11 @@
         </p>
       </div>
       <div class="problem-box">
-        <h2>2022 USAMO Problem 4 / USAJMO Problem 5</h2>
+        <h2>
+          <a href="https://aops.com/community/p24774670"
+            >2022 USAMO Problem 4 / USAJMO Problem 5</a
+          >
+        </h2>
         <p>
           Find all pairs of primes \((p, q)\) for which \(p - q\) and \(pq - q\)
           are both square.
@@ -196,7 +236,11 @@
       </div>
 
       <div class="problem-box">
-        <h2>2022 USAJMO Problem 1</h2>
+        <h2>
+          <a href="https://aops.com/community/p24774800"
+            >2022 USAJMO Problem 1</a
+          >
+        </h2>
         <p>
           Find all \(m \in \mathbb{Z}^+\) for which there exists an infinite
           nonconstant sequence in \(\mathbb{Z}/m\mathbb{Z}\) that is both
@@ -205,7 +249,11 @@
       </div>
 
       <div class="problem-box">
-        <h2>2021 TSTST Problem 7</h2>
+        <h2>
+          <a href="https://aops.com/community/p24130213"
+            >2021 TSTST Problem 7</a
+          >
+        </h2>
         <p>
           Let \(M\) be a finite set of lattice points and \(n\) be a positive
           integer. A <em>mine-avoiding path</em> is a path of lattice points
@@ -217,7 +265,11 @@
       </div>
 
       <div class="problem-box">
-        <h2>2021 TSTST Problem 4</h2>
+        <h2>
+          <a href="https://aops.com/community/p23864177"
+            >2021 TSTST Problem 4</a
+          >
+        </h2>
         <p>
           Let \(a\) and \(b\) be positive integers such that there are
           infinitely many pairs of positive integers \((m, n)\) such that \(m^2
@@ -227,7 +279,11 @@
       </div>
 
       <div class="problem-box">
-        <h2>2021 TSTST Problem 1</h2>
+        <h2>
+          <a href="https://aops.com/community/p23586650"
+            >2021 TSTST Problem 1</a
+          >
+        </h2>
         <p>
           Points \(X\) and \(Y\) lie on sides \(\overline{AB}\) and
           \(\overline{CD}\) of cyclic quadrilateral \(ABCD\) with center \(O\).
@@ -237,7 +293,11 @@
       </div>
 
       <div class="problem-box">
-        <h2>2021 USEMO Problem 1</h2>
+        <h2>
+          <a href="https://aops.com/community/p23517195"
+            >2021 USEMO Problem 1</a
+          >
+        </h2>
         <p>
           In an \(n \times n\) square of \(n^2\) real numbers, maximize the
           number of numbers greater than the average of its row but less than
@@ -246,7 +306,9 @@
       </div>
 
       <div class="problem-box">
-        <h2>2019 ELMO Problem 2</h2>
+        <h2>
+          <a href="https://aops.com/community/p12573504">2019 ELMO Problem 2</a>
+        </h2>
         <p>
           Evan has a convex \(n\)-gon in the plane for a given positive integer
           \(n\ge 3\) and wishes to construct the centroid of its vertices. He
