--- a/olympiad.html
+++ b/olympiad.html
@@ -62,7 +62,9 @@
       <div class="problem-box">
         <h2>
           <a href="https://aops.com/community/p29309230">
-            >2023 USAMTS Round 2 Problem 4</h2></a>
+            2023 USAMTS Round 2 Problem 4</a
+          >
+        </h2>
         <p>
           \(ABC\)'s incircle has center \(I\) and is tangent to
           \(\overline{BC}\), \(\overline{CA}\), and \(\overline{AB}\) at \(D\),
@@ -119,7 +121,8 @@
 
       <div class="problem-box">
         <h2>
-          <a href="https://aops.com/community/p28014215">2023 ELMO Problem 3</h2></a>
+          <a href="https://aops.com/community/p28014215">2023 ELMO Problem 3</a>
+        </h2>
         <p>
           Quadrilaterals \(ABCD \sim A_1B_1C_1D_1 \sim A_2B_2C_2D_2\) lie in the
           plane such that \[ \overline{A_1B_2} \subset \overline{AB}, \:
@@ -131,7 +134,9 @@
         </p>
       </div>
       <div class="problem-box">
-        <h2><a href="https://aops.com/community/p27587348">2023 HMIC Problem 3</a></h2>
+        <h2>
+          <a href="https://aops.com/community/p27587348">2023 HMIC Problem 3</a>
+        </h2>
         <p>
           A circle through \(B\) and a circle through \(C\) are both externally
           tangent to the incircle and \(A\)-excircle of \(\triangle ABC\). Prove
@@ -140,7 +145,9 @@
       </div>
 
       <div class="problem-box">
-        <h2><a href="https://aops.com/community/p27587336">2023 HMIC Problem 2</a></h2>
+        <h2>
+          <a href="https://aops.com/community/p27587336">2023 HMIC Problem 2</a>
+        </h2>
         <p>
           Find all primes \(p \geq 5\) for which \[ \left\{2^{-1}, 3^{-1},
           \ldots, \left(\frac{p-1}{2}\right)^{-1}\right\} = \left\{-2, -3,
@@ -176,7 +183,11 @@
       </div>
 
       <div class="problem-box">
-        <h2><a href="https://aops.com/community/p27125752">2023 February HMMT Team Round Problem 4</a></h2>
+        <h2>
+          <a href="https://aops.com/community/p27125752"
+            >2023 February HMMT Team Round Problem 4</a
+          >
+        </h2>
         <p>
           Philena and Nathan are playing a game. First, Nathan secretly chooses
           an ordered pair \((x, y)\) of positive integers such that \(x \leq
@@ -219,7 +230,9 @@
       </div>
 
       <div class="problem-box">
-        <h2><a href="https://aops.com/community/p25496308">2022 ELMO Problem 4</a></h2>
+        <h2>
+          <a href="https://aops.com/community/p25496308">2022 ELMO Problem 4</a>
+        </h2>
         <p>
           Convex pentagon \(ABCDE\) satisfies \(ABE \sim BEC \sim EDB\). Prove
           \(\overline{BE}\), \(\overline{CD}\), and the tangent to \((ACD)\) at
