added golden and audition to arrangements

--- a/music/arrangements.html
+++ b/music/arrangements.html
@@ -170,6 +170,23 @@
             <h2>Solo piano</h2>
             <ul>
                 <li>
+                    "Audition (The Fools Who Dream)" by Justin Hurwitz (<a
+                        href="../files/scores/arrangements/audition.pdf"
+                        ,
+                        target="_blank"
+                        >score</a
+                    >)
+                </li>
+                <li>
+                    "Golden" from <em>K-Pop Demon Hunters</em>, by Kim Eun-jae
+                    and Mark Sonnenblick (<a
+                        href="../files/scores/arrangements/golden.pdf"
+                        ,
+                        target="_blank"
+                        >score</a
+                    >)
+                </li>
+                <li>
                     <em>La valse</em> by Maurice Ravel (<a
                         href="../files/scores/arrangements/lavalse.pdf"
                         ,
