added spotify and youtube links to compositions and arrangements

--- a/music/arrangements.html
+++ b/music/arrangements.html
@@ -201,14 +201,30 @@
                         target="_blank"
                         >score</a
                     >,
-                    <a href="https://www.youtube.com/watch?v=oDaypoU4Gk4"
-                        >recording</a
+                    <a
+                        href="https://www.youtube.com/watch?v=u20TW8AyVFs"
+                        ,
+                        target="_blank"
+                        >YouTube</a
                     >,
-                    <a href="https://andrewwu.substack.com/p/moon-river"
+                    <a
+                        href="https://open.spotify.com/track/2NdVJ2QRjs1NKpuVQHcgXY?si=1839557c1eb54c45"
+                        ,
+                        target="_blank"
+                        >Spotify</a
+                    >,
+                    <a
+                        href="https://andrewwu.substack.com/p/moon-river"
+                        ,
+                        ,
+                        target="_blank"
                         >program notes</a
                     >,
                     <a
                         href="https://afoolscholar.substack.com/p/holden-muis-moon-river-and-the-sound"
+                        ,
+                        ,
+                        target="_blank"
                         >review</a
                     >)
                 </li>
