--- a/music/composition.html
+++ b/music/composition.html
@@ -81,7 +81,13 @@
                         href="https://www.youtube.com/watch?v=yDUwDa5HAnw"
                         ,
                         target="_blank"
-                        >recording</a
+                        >YouTube</a
+                    >,
+                    <a
+                        href="https://open.spotify.com/track/0od9O33OnaVCkj8SdtCLL5?si=cd3294b622fa4c32"
+                        ,
+                        target="_blank"
+                        >Spotify</a
                     >,
                     <a
                         href="https://andrewwu.substack.com/p/poetry"
@@ -158,10 +164,16 @@
                         >score</a
                     >,
                     <a
-                        href="https://www.youtube.com/watch?v=j2ffnwCNmk8"
+                        href="https://www.youtube.com/watch?v=-UqoInqsd1E"
                         ,
                         target="_blank"
-                        >recording</a
+                        >YouTube</a
+                    >,
+                    <a
+                        href="https://open.spotify.com/album/3qwNjluWAOmCm99hPMyvXs?si=iNLJ9FD1TbKV_MO_JlbGJw"
+                        ,
+                        target="_blank"
+                        >Spotify</a
                     >,
                     <a
                         href="https://andrewwu.substack.com/p/serenade"
@@ -174,8 +186,7 @@
                         ,
                         target="_blank"
                         >toccata program notes</a
-                    >
-                    )
+                    >)
                 </li>
                 <li>
                     <em>Farewell</em>, for solo cello (<a
@@ -188,7 +199,7 @@
                         href="https://www.youtube.com/watch?v=plBV1UYrIeI"
                         ,
                         target="_blank"
-                        >recording</a
+                        >YouTube</a
                     >)
                 </li>
                 <li>
