--- a/music/composition.html
+++ b/music/composition.html
@@ -81,7 +81,7 @@
                         href="https://www.youtube.com/watch?v=yDUwDa5HAnw"
                         ,
                         target="_blank"
-                        >YouTube</a
+                        >recording</a
                     >,
                     <a
                         href="https://open.spotify.com/track/0od9O33OnaVCkj8SdtCLL5?si=cd3294b622fa4c32"
@@ -130,10 +130,16 @@
                         >score</a
                     >,
                     <a
+                        href="https://www.youtube.com/watch?v=c_RGF6Y_iGU"
+                        ,
+                        target="_blank"
+                        >YouTube</a
+                    >,
+                    <a
                         href="https://www.youtube.com/watch?v=DM1US3yQ58g"
                         ,
                         target="_blank"
-                        >recording</a
+                        >video</a
                     >,
                     <a
                         href="../files/scores/compositions/landscapes_programnotes.pdf"
