formatting, news article, usemo problem, nancy's thoughts

--- a/music/composition.html
+++ b/music/composition.html
@@ -258,6 +258,12 @@
                         ,
                         target="_blank"
                         >playbill</a
+                    >,
+                    <a
+                        href="https://nzzuo.substack.com/p/ai-cant-replace-me"
+                        ,
+                        target="_blank"
+                        >thoughts from a producer</a
                     >)
                 </li>
                 <li>
