--- a/other/musicguesser.html
+++ b/other/musicguesser.html
@@ -1,253 +1,300 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Music Guesser - Holden Mui</title>
-    <link rel="icon" href="../files/images/turtleicon.png" type="image/x-icon" />
-    <link rel="stylesheet" href="../style.css" />
-    <style>
-      nav {
-        padding-right: 0px;
-      }
-      body {
-        background-color: navy;
-      }
-      img {
-          -webkit-user-drag: none;
-          -khtml-user-drag: none;
-          -moz-user-drag: none;
-          -o-user-drag: none;
-      }
-      main {
-        max-width: 100%;
-        background: linear-gradient(to bottom, var(--turtle-green), navy);
-        box-shadow: none;
-        color: white;
-        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-        font-weight: bold;
-        text-align: center;
-        border-radius: 0;
-        padding-top: 10vh;
-        top:0;
-        left:0;
-        min-height: calc(100vh - 200px);
-      }
-      button {
-        background-color: var(--dark-green);
-        border-radius: 10px;
-        color: white;
-        font-weight: bold;
-        padding: 10px 10px;
-        text-align: center;
-        display: inline-block;
-        font-size: 16px;
-        cursor: pointer;
-        transition: transform 0.2s, box-shadow 0.2s;
-        border: 4px solid var(--turtle-green);
-        margin: 10px;
-      }
-      button:hover {
-        transform: scale(1.05);
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      }
-      #skipButton:disabled {
-        pointer-events: none;
-        opacity: 0.5;
-      }
-      #scoreShareButton:disabled {
-        pointer-events: none;
-        background-color: transparent;
-        border: 4px solid transparent;
-        transition: none;
-        box-shadow: none;
-      }
-      :root {
-          --input-width: 300px;
-      }
-      input[type="text"] {
-        border-radius: 10px;
-        font-weight: bold;
-        padding: 10px;
-        text-align: center;
-        font-size: 16px;
-        border: none;
-        transition: transform 0.2s, box-shadow 0.2s;
-        width: var(--input-width);
-        background-color: #b2ebf2;
-      }
-      input[type="text"]:hover {
-        background-color: #c2ebf2;
-      }
-      input[type="text"]:focus {
-        outline: none;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      }
-      input[type="text"]:disabled {
-        opacity: 0.5;
-      }
-      .suggestions {
-        width: var(--input-width);
-        text-align: left;
-        max-height: 200px;
-        overflow-y: auto;
-        background-color: white;
-        list-style-type: none;
-        color: var(--dark-green);
-        text-shadow: none;
-        padding: 0;
-        margin: 0;
-        position: absolute;
-        left: 50%;
-        transform: translateX(-50%);
-        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
-        opacity: 0.5;
-      }
-      .suggestions li {
-          cursor: pointer;
-          margin-top: 0px;
-          margin-bottom: 0px;
-          padding: 5px;
-      }
-      .suggestions li:hover {
-          background-color: #f0f0f0;
-      }
-      .left-portrait, .right-portrait {
-        position: absolute;
-        top: 20%;
-        width: 20%;
-      }
-      .left-portrait {
-        left: 5%;
-      }
-      .right-portrait {
-        right: 5%;
-      }
-      .portrait img {
-        width: 100%;
-        aspect-ratio: 1/1;
-        object-fit: cover;
-        border-radius: 10px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        border: 4px solid rgba(255, 255, 255, 0.5);
-      }
-      @media (max-width: 550px), (orientation: portrait) {
-        .left-portrait, .right-portrait {
-          display: none;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <header>
-      <div class="top-left-name">
-        <img src="../files/images/turtleicon.png" alt="Turtle icon" class="name-icon" />
-        <div style="display: inline-block">
-          <div class="hide-name">
-            <a class="namebtn" href="../index.html">Holden Mui</a>
-          </div>
-        </div>
-      </div>
-      <nav>
-        <div class="dropdown">
-          <div id="backButton" style="display: none;">
-            <a class="dropbtn" href="musicguesser.html">Back</a>
-          </div>
-        </div>
-      </nav>
-    </header>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Music Guesser - Holden Mui</title>
+        <link
+            rel="icon"
+            href="../files/images/turtleicon.png"
+            type="image/x-icon"
+        />
+        <link rel="stylesheet" href="../style.css" />
+        <style>
+            nav {
+                padding-right: 0px;
+            }
+            body {
+                background-color: navy;
+            }
+            img {
+                -webkit-user-drag: none;
+                -khtml-user-drag: none;
+                -moz-user-drag: none;
+                -o-user-drag: none;
+            }
+            main {
+                max-width: 100%;
+                background: linear-gradient(
+                    to bottom,
+                    var(--turtle-green),
+                    navy
+                );
+                box-shadow: none;
+                color: white;
+                text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+                font-weight: bold;
+                text-align: center;
+                border-radius: 0;
+                padding-top: 10vh;
+                top: 0;
+                left: 0;
+                min-height: calc(100vh - 200px);
+            }
+            button {
+                background-color: var(--dark-green);
+                border-radius: 10px;
+                color: white;
+                font-weight: bold;
+                padding: 10px 10px;
+                text-align: center;
+                display: inline-block;
+                font-size: 16px;
+                cursor: pointer;
+                transition:
+                    transform 0.2s,
+                    box-shadow 0.2s;
+                border: 4px solid var(--turtle-green);
+                margin: 10px;
+            }
+            button:hover {
+                transform: scale(1.05);
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            }
+            #skipButton:disabled {
+                pointer-events: none;
+                opacity: 0.5;
+            }
+            #scoreShareButton:disabled {
+                pointer-events: none;
+                background-color: transparent;
+                border: 4px solid transparent;
+                transition: none;
+                box-shadow: none;
+            }
+            :root {
+                --input-width: 300px;
+            }
+            input[type="text"] {
+                border-radius: 10px;
+                font-weight: bold;
+                padding: 10px;
+                text-align: center;
+                font-size: 16px;
+                border: none;
+                transition:
+                    transform 0.2s,
+                    box-shadow 0.2s;
+                width: var(--input-width);
+                background-color: #b2ebf2;
+            }
+            input[type="text"]:hover {
+                background-color: #c2ebf2;
+            }
+            input[type="text"]:focus {
+                outline: none;
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            }
+            input[type="text"]:disabled {
+                opacity: 0.5;
+            }
+            .suggestions {
+                width: var(--input-width);
+                text-align: left;
+                max-height: 200px;
+                overflow-y: auto;
+                background-color: white;
+                list-style-type: none;
+                color: var(--dark-green);
+                text-shadow: none;
+                padding: 0;
+                margin: 0;
+                position: absolute;
+                left: 50%;
+                transform: translateX(-50%);
+                box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+                opacity: 0.5;
+            }
+            .suggestions li {
+                cursor: pointer;
+                margin-top: 0px;
+                margin-bottom: 0px;
+                padding: 5px;
+            }
+            .suggestions li:hover {
+                background-color: #f0f0f0;
+            }
+            .left-portrait,
+            .right-portrait {
+                position: absolute;
+                top: 20%;
+                width: 20%;
+            }
+            .left-portrait {
+                left: 5%;
+            }
+            .right-portrait {
+                right: 5%;
+            }
+            .portrait img {
+                width: 100%;
+                aspect-ratio: 1/1;
+                object-fit: cover;
+                border-radius: 10px;
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+                border: 4px solid rgba(255, 255, 255, 0.5);
+            }
+            @media (max-width: 550px), (orientation: portrait) {
+                .left-portrait,
+                .right-portrait {
+                    display: none;
+                }
+            }
+        </style>
+    </head>
+    <body>
+        <header>
+            <div class="top-left-name">
+                <img
+                    src="../files/images/turtleicon.png"
+                    alt="Turtle icon"
+                    class="name-icon"
+                />
+                <div style="display: inline-block">
+                    <div class="hide-name">
+                        <a class="namebtn" href="../index.html">Holden Mui</a>
+                    </div>
+                </div>
+            </div>
+            <nav>
+                <div class="dropdown">
+                    <div id="backButton" style="display: none">
+                        <a class="dropbtn" href="musicguesser.html">Back</a>
+                    </div>
+                </div>
+            </nav>
+        </header>
 
-    <main>
-      <h1>Music Guesser</h1>
-      <div id="playlistSelector">
-        <p>Select a playlist below.</p>
-        <h2>Pop</h2>
-        <button onclick="loadGame('swift')">Taylor Swift</button>
-        <button onclick="loadGame('grande')">Ariana Grande</button>
-        <button onclick="loadGame('beatles')">Beatles</button>
-        <button onclick="loadGame('abba')">ABBA</button>
-        <button onclick="loadGame('mendes')">Shawn Mendes</button>
-        <button onclick="loadGame('kahan')">Noah Kahan</button>
-        <button onclick="loadGame('marx')">Richard Marx</button>
-        <h2>Rock</h2>
-        <button onclick="loadGame('queen')">Queen</button>
-        <button onclick="loadGame('redhotchilipeppers')">Red Hot Chili Peppers</button>
-        <h2>Soundtrack</h2>
-        <button onclick="loadGame('greatestshowman')">The Greatest Showman</button>
-        <button onclick="loadGame('hamilton')">Hamilton</button>
-        <button onclick="loadGame('frozen')">Frozen</button>
-        <button onclick="loadGame('wicked')">Wicked</button>
-        <h2>Classical</h2>
-        <button onclick="loadGame('ravel')">Maurice Ravel</button>
-        <button onclick="loadGame('rachmaninoff')">Rachmaninoff piano concerti</button>
-        <button onclick="loadGame('chopinetudes')">Chopin etudes</button>
-        <button onclick="loadGame('paganinicaprices')">Paganini caprices</button>
-        <button onclick="loadGame('bachcello')">Bach cello suites</button>
-        <br>
-        <br>
-        <p>
-          Feel free to email me at hsmui (at) mit (dot) edu for playlist suggestions!
-        </p>
-      </div>
-      <br>
-      <div id="gameContent" style="display: none;">
-        <p>Time Remaining: <span id="timer"></span> <span id="seconds-label">seconds</span></p>
-        <p>Score: <span id="score"></span></p>
-        <audio id="songA">
-            <source id="audioSourceA" src="" type="audio/mpeg">
-            Your browser does not support the audio element.
-        </audio>
-        <audio id="songB">
-            <source id="audioSourceB" src="" type="audio/mpeg">
-        </audio>
-        <button id="startButton" onclick="startGame()">Start</button>
-        <button id="skipButton" onclick="skipSong()" disabled>Skip</button>
-        <br>
-        <br>
-        <label>
-        <input list="suggestions" id="guess" type="text" placeholder="press 'Start'" autocomplete="off" disabled/></label>
-        <ul id="suggestions" class="suggestions">
-        </ul>
-        <p id="feedback"></p>
-        <p id="instructions"></p>
-        <div id="scoreShare" style="display: none;">
-          <button id="scoreShareButton" onclick="copyReportToClipboard()">Share your score!</button>
-        </div>
-        <p id="copyStatus"></p>
-        <div class="portrait">
-          <div class="left-portrait">
-            <img id="leftPortrait" src="" alt="Left Portrait">
-          </div>
-        </div>
-        <div class="portrait">
-          <div class="right-portrait">
-            <img id="rightPortrait" src="" alt="Right Portrait">
-          </div>
-        </div>
-      </div>
-      <script src="musicguesser.js" defer></script>
-    </main>
-  </body>
+        <main>
+            <h1>Music Guesser</h1>
+            <div id="playlistSelector">
+                <p>Select a playlist below.</p>
+                <h2>Pop</h2>
+                <button onclick="loadGame('swift')">Taylor Swift</button>
+                <button onclick="loadGame('grande')">Ariana Grande</button>
+                <button onclick="loadGame('beatles')">Beatles</button>
+                <button onclick="loadGame('abba')">ABBA</button>
+                <button onclick="loadGame('mendes')">Shawn Mendes</button>
+                <button onclick="loadGame('kahan')">Noah Kahan</button>
+                <button onclick="loadGame('marx')">Richard Marx</button>
+                <h2>Rock</h2>
+                <button onclick="loadGame('queen')">Queen</button>
+                <button onclick="loadGame('redhotchilipeppers')">
+                    Red Hot Chili Peppers
+                </button>
+                <h2>Soundtrack</h2>
+                <button onclick="loadGame('greatestshowman')">
+                    The Greatest Showman
+                </button>
+                <button onclick="loadGame('hamilton')">Hamilton</button>
+                <button onclick="loadGame('frozen')">Frozen</button>
+                <button onclick="loadGame('wicked')">Wicked</button>
+                <h2>Classical</h2>
+                <button onclick="loadGame('ravel')">Maurice Ravel</button>
+                <button onclick="loadGame('rachmaninoff')">
+                    Rachmaninoff piano concerti
+                </button>
+                <button onclick="loadGame('chopinetudes')">
+                    Chopin etudes
+                </button>
+                <button onclick="loadGame('paganinicaprices')">
+                    Paganini caprices
+                </button>
+                <button onclick="loadGame('bachcello')">
+                    Bach cello suites
+                </button>
+                <br />
+                <br />
+                <p>
+                    Feel free to email me at hsmui (at) mit (dot) edu for
+                    playlist suggestions!
+                </p>
+            </div>
+            <br />
+            <div id="gameContent" style="display: none">
+                <p>
+                    Time Remaining: <span id="timer"></span>
+                    <span id="seconds-label">seconds</span>
+                </p>
+                <p>Score: <span id="score"></span></p>
+                <audio id="songA">
+                    <source id="audioSourceA" src="" type="audio/mpeg" />
+                    Your browser does not support the audio element.
+                </audio>
+                <audio id="songB">
+                    <source id="audioSourceB" src="" type="audio/mpeg" />
+                </audio>
+                <button id="startButton" onclick="startGame()">Start</button>
+                <button id="skipButton" onclick="skipSong()" disabled>
+                    Skip
+                </button>
+                <br />
+                <br />
+                <label>
+                    <input
+                        list="suggestions"
+                        id="guess"
+                        type="text"
+                        placeholder="press 'Start'"
+                        autocomplete="off"
+                        disabled
+                /></label>
+                <ul id="suggestions" class="suggestions"></ul>
+                <p id="feedback"></p>
+                <p id="instructions"></p>
+                <div id="scoreShare" style="display: none">
+                    <button
+                        id="scoreShareButton"
+                        onclick="copyReportToClipboard()"
+                    >
+                        Share your score!
+                    </button>
+                </div>
+                <p id="copyStatus"></p>
+                <div class="portrait">
+                    <div class="left-portrait">
+                        <img id="leftPortrait" src="" alt="Left Portrait" />
+                    </div>
+                </div>
+                <div class="portrait">
+                    <div class="right-portrait">
+                        <img id="rightPortrait" src="" alt="Right Portrait" />
+                    </div>
+                </div>
+            </div>
+            <script src="musicguesser.js" defer></script>
+        </main>
+    </body>
 
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const dropdowns = document.querySelectorAll('.dropdown');
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            const dropdowns = document.querySelectorAll(".dropdown");
 
-      dropdowns.forEach(dropdown => {
-        const button = dropdown.querySelector('.dropbtn');
-        button.addEventListener('click', () => {
-          dropdown.classList.toggle('active');
+            dropdowns.forEach((dropdown) => {
+                const button = dropdown.querySelector(".dropbtn");
+                button.addEventListener("click", () => {
+                    dropdown.classList.toggle("active");
+                });
+            });
+
+            // Optional: Close dropdown if clicking outside
+            document.addEventListener("click", (e) => {
+                dropdowns.forEach((dropdown) => {
+                    if (!dropdown.contains(e.target)) {
+                        dropdown.classList.remove("active");
+                    }
+                });
+            });
         });
-      });
-
-      // Optional: Close dropdown if clicking outside
-      document.addEventListener('click', (e) => {
-        dropdowns.forEach(dropdown => {
-          if (!dropdown.contains(e.target)) {
-            dropdown.classList.remove('active');
-          }
-        });
-      });
-    });
-  </script>
+    </script>
 </html>
