added link for aops thread

--- a/math/olympiad.html
+++ b/math/olympiad.html
@@ -203,7 +203,7 @@
                 </p>
             </div>
             <p>
-                (<a href="https://aops.com/community/" , target="_blank"
+                (<a href="https://aops.com/community/c6h3702124" , target="_blank"
                     >AoPS thread</a
                 >,
                 <a href="../files/proposals/2025usemo3.pdf" , target="_blank"
