added youtube playlist and Return score

--- a/music/composition.html
+++ b/music/composition.html
@@ -267,6 +267,14 @@
                     >)
                 </li>
                 <li>
+                    <em>Return</em>, for solo violin (<a
+                        href="../files/scores/compositions/return.pdf"
+                        ,
+                        target="_blank"
+                        >score</a
+                    >)
+                </li>
+                <li>
                     <em>Concerto in E for Piano and Orchestra</em>, for piano
                     and orchestra (<a
                         href="../files/scores/compositions/concerto.pdf"
@@ -330,6 +338,12 @@
                     >)
                 </li>
             </ul>
+            You can find a YouTube playlist containing some of my compositions
+            <a
+                href="https://youtube.com/playlist?list=PLRjA4SLedN6QkuvKBOGQA0EQpV4mFbWtc&si=HFvvPmhrLS5l8kum"
+                target="_blank"
+                >here</a
+            >.
         </main>
     </body>
 
