updated pursuit score

--- a/music/composition.html
+++ b/music/composition.html
@@ -116,10 +116,10 @@
                         >recording</a
                     >,
                     <a
-                        href="../files/scores/compositions/pursuit_programnotes.pdf"
+                        href="../files/scores/compositions/pursuit_landscape.pdf"
                         ,
                         target="_blank"
-                        >program notes</a
+                        >landscape score</a
                     >)
                 </li>
                 <li>
@@ -140,12 +140,6 @@
                         ,
                         target="_blank"
                         >video</a
-                    >,
-                    <a
-                        href="../files/scores/compositions/landscapes_programnotes.pdf"
-                        ,
-                        target="_blank"
-                        >program notes</a
                     >)
                 </li>
                 <li>
