added return video

--- a/music/composition.html
+++ b/music/composition.html
@@ -107,7 +107,7 @@
                         href="../files/scores/compositions/pursuit.pdf"
                         ,
                         target="_blank"
-                        >score</a
+                        >score and parts</a
                     >,
                     <a
                         href="https://www.youtube.com/watch?v=GcsKr4Tnve4"
@@ -127,7 +127,7 @@
                         href="../files/scores/compositions/landscapes.pdf"
                         ,
                         target="_blank"
-                        >score</a
+                        >score and parts</a
                     >,
                     <a
                         href="https://www.youtube.com/watch?v=c_RGF6Y_iGU"
@@ -147,7 +147,7 @@
                         href="../files/scores/compositions/trio.pdf"
                         ,
                         target="_blank"
-                        >score</a
+                        >score and parts</a
                     >,
                     <a
                         href="https://www.youtube.com/watch?v=6RFLmaE71YE"
@@ -207,7 +207,7 @@
                         href="../files/scores/compositions/underwateradventures.pdf"
                         ,
                         target="_blank"
-                        >score</a
+                        >score and parts</a
                     >,
                     <a
                         href="https://www.youtube.com/watch?v=HHBBTzr9V48"
@@ -266,6 +266,12 @@
                         ,
                         target="_blank"
                         >score</a
+                    >,
+                    <a
+                        href="https://www.youtube.com/watch?v=YZ-s9tqPIpI"
+                        ,
+                        target="_blank"
+                        >video</a
                     >)
                 </li>
                 <li>
