--- a/music/composition.html
+++ b/music/composition.html
@@ -113,7 +113,7 @@
                         href="https://www.youtube.com/watch?v=GcsKr4Tnve4"
                         ,
                         target="_blank"
-                        >recording</a
+                        >video</a
                     >,
                     <a
                         href="../files/scores/compositions/pursuit_landscape.pdf"
@@ -245,7 +245,7 @@
                         href="https://www.youtube.com/watch?v=QVEWwjKOZ-k"
                         ,
                         target="_blank"
-                        >recording</a
+                        >video</a
                     >,
                     <a
                         href="../files/scores/compositions/sparcthemusicalplaybill.pdf"
@@ -294,7 +294,7 @@
                         href="https://www.youtube.com/watch?v=pO6skgvUgSs"
                         ,
                         target="_blank"
-                        >recording</a
+                        >video</a
                     >)
                 </li>
                 <li>
