added youtube links

--- a/music/arrangements.html
+++ b/music/arrangements.html
@@ -92,6 +92,9 @@
                         target="_blank"
                         >score</a
                     >,
+                    <a href="https://www.youtube.com/watch?v=QymUjfjwBKs"
+                        >video</a
+                    >,
                     <a href="https://www.youtube.com/watch?v=y_S6hmn81sc"
                         >recording</a
                     >)
