--- a/music/composition.html
+++ b/music/composition.html
@@ -110,6 +110,12 @@
                         >score and parts</a
                     >,
                     <a
+                        href="https://www.youtube.com/watch?v=otoLM3Vy2II"
+                        ,
+                        target="_blank"
+                        >YouTube</a
+                    >,
+                    <a
                         href="https://www.youtube.com/watch?v=GcsKr4Tnve4"
                         ,
                         target="_blank"
