added how far I'll go

--- a/music/arrangements.html
+++ b/music/arrangements.html
@@ -114,6 +114,20 @@
                     >)
                 </li>
                 <li>
+                    "How Far I'll Go" from <em>Moana</em> (<a
+                        href="../files/scores/arrangements/howfarillgo.pdf"
+                        ,
+                        target="_blank"
+                        >score</a
+                    >,
+                    <a
+                        href="../files/scores/arrangements/howfarillgo_voice.pdf"
+                        ,
+                        target="_blank"
+                        >vocal part</a
+                    >)
+                </li>
+                <li>
                     "Into the Unknown" from <em>Frozen 2</em> (<a
                         href="../files/scores/arrangements/intotheunknown.pdf"
                         ,
