added three more talks

--- a/math/talks.html
+++ b/math/talks.html
@@ -60,6 +60,30 @@
 
     <main>
       <h1>Talks</h1>
+      <h3>How To Build A Computer Out Of Polynomials</h3>
+      <p>
+        How can one build an encrypted computer out of polynomials?
+        This talk was given as part of the 0xPARC "The Future Of (Super) Computing" event hosted
+        jointly with the MIT Informatics Tournament (MITIT).
+      </p>
+      (<a href="../files/slides/basicphysics.pdf", target="_blank">slides</a>)
+      <hr>
+      <h3>Basic Physics</h3>
+      <p>
+        A first-principles reconstruction of classical physics that exposes
+        how much we use ideas like force and energy without really understanding definitions or assumptions.
+        This talk was given as part of the 0xPARC Workshop Series.
+      </p>
+      (<a href="../files/slides/basicphysics.pdf", target="_blank">slides</a>)
+      <hr>
+      <h3>The Twisted Dual Elliptic Curve Deterministic Random Bit Generator</h3>
+      <p>
+          The government recommended a backdoored random number generator for public use;
+          however, it was not even statistically unbiased. We remove this bias while retaining the backdoor.
+          This talk was given as part of the 6.5610 (Applied Cryptography) final presentations.
+      </p>
+      (<a href="../files/slides/twisteddualec.pdf", target="_blank">slides</a>)
+      <hr>
       <h3>Gluing Polygons</h3>
       <p>
         What happens when you randomly glue the edges of a polygon?
