resume updates, minor wording edits

--- a/mit/coursework.html
+++ b/mit/coursework.html
@@ -60,7 +60,7 @@
 
     <main>
         <h1>Coursework</h1>
-        This is a list of the classes I have taken during my time at MIT.
+        This is a list of the classes I took during my time at MIT.
         <h2>Spring 2025</h2>
         <ul>
             <li>6.5610 (Applied Cryptography)</li>
