--- a/music/composition.html
+++ b/music/composition.html
@@ -90,7 +90,7 @@
                         >Spotify</a
                     >,
                     <a
-                        href="https://andrewwu.substack.com/p/poetry"
+                        href="https://andrewwu.substack.com/p/poetry-021"
                         ,
                         target="_blank"
                         >program notes</a
