removed random tab, created news tab and music guesser tab, removed one essay

--- a/math/puzzles.html
+++ b/math/puzzles.html
@@ -49,6 +49,7 @@
               <a href="../music/piano.html">Piano</a>
               <a href="../music/composition.html">Composition</a>
               <a href="../music/arrangements.html">Arrangements</a>
+              <a href="../music/musicguesser.html">Music Guesser</a>
           </div>
         </div>
         <div class="dropdown">
@@ -57,7 +58,7 @@
               <a href="../other/resume.html">Resume</a>
               <a href="../other/writing.html">Writing</a>
               <a href="../other/gallery.html">Gallery</a>
-              <a href="../other/random.html">Random</a>
+              <a href="../other/news.html">News</a>
           </div>
         </div>
       </nav>
@@ -65,8 +66,9 @@
 
     <main>
         <h1>Puzzles</h1>
-        Here are some math puzzles I have been collecting over the years.
+        Here are some puzzles I have been collecting over the years.
         <hr>
+        <h2>Math Puzzles</h2>
         <details>
             <summary>Face-up cards</summary>
             <div class="shaded-box">
@@ -393,6 +395,30 @@
                 </p>
             </div>
         </details>
+
+        <hr>
+        <h2>Number Puzzles</h2>
+        <p>
+            Here are some number puzzles. Use the given numbers, each
+            exactly once, along with addition, subtraction, multiplication,
+            and division, to create the target number. Parentheses are
+            allowed, but concatenation is not.
+        </p>
+        <ul>
+            <li>Make 111 with 4, 5, 6, 7, 8.</li>
+            <li>Make 59 with 4, 4, 6, 8, 9.</li>
+            <li>Make 88 with 1, 4, 10, 20, 35.</li>
+            <li>Make 5 with 16, 24, 36, 54, 81.</li>
+            <li>Make 20 with 60, 72, 84, 90, 96.</li>
+            <li>Make 19 with 81, 108, 144, 192, 256.</li>
+            <li>Make 77 with 4, 4, 4, 4, 6, 6.</li>
+            <li>Make 511 with 2, 3, 4, 6, 8, 12.</li>
+            <li>Make 1337 with 6, 10, 14, 15, 21, 35.</li>
+            <li>Make 10 with 14, 14, 14, 15, 15, 15.</li>
+            <li>Make 73 with 15, 15, 21, 21, 35, 35.</li>
+            <li>Make 7 with 33, 33, 34, 34, 35, 35.</li>
+            <li>Make 105 with 1/2, 1/4, 1/8, 1/16, 1/32, 1/64.</li>
+        </ul>
     </main>
   </body>
 
