--- a/other/writing.html
+++ b/other/writing.html
@@ -57,6 +57,7 @@
               <a href="../music/piano.html">Piano</a>
               <a href="../music/composition.html">Composition</a>
               <a href="../music/arrangements.html">Arrangements</a>
+              <a href="../music/musicguesser.html">Music Guesser</a>
           </div>
         </div>
         <div class="dropdown">
@@ -65,7 +66,7 @@
               <a href="../other/resume.html">Resume</a>
               <a href="../other/writing.html">Writing</a>
               <a href="../other/gallery.html">Gallery</a>
-              <a href="../other/random.html">Random</a>
+              <a href="../other/news.html">News</a>
           </div>
         </div>
       </nav>
@@ -81,46 +82,11 @@
             Quick links:
           </p>
           <ul>
-              <li><a href="#writing-music">Writing Music</a></li>
               <li><a href="#grader-nightmare">A Grader's Worst Nightmare</a></li>
               <li><a href="#modern-classical">On Modern Classical Music</a></li>
               <li><a href="#physics-napkin">Physics Napkin</a></li>
               <li><a href="#learning-mandarin">Learning Mandarin</a></li>
           </ul>
-        </div>
-        <hr>
-        <div>
-          <h2 id="writing-music">Writing Music</h2>
-          <p>
-            I love to write music; it is one of my favorite pastimes. It enables
-            me to capture my emotional state in a way that words cannot.
-          </p>
-
-          <p>
-            Contrary to what most young composers do nowadays, I start a piece the
-            old-fashioned way: by sitting at my desk with a pencil and a music
-            notebook. I write best when I feel intensely introspective—after an
-            argument with my parents or after a brief bike ride around my town,
-            for example—though even in such situations, it still takes multiple
-            attempts at an opening before I am satisfied with what I've written.
-          </p>
-
-          <p>
-            In a strange, Platonic way, I firmly believe that the first few
-            measures of any piece of music should uniquely determine the rest of
-            its course; that is, given two possibilities of continuing a passage,
-            there should only be one objectively "correct" way to continue it.
-            Thus, once I write the opening, it's almost as if I'm letting the
-            music write itself and I'm only there to make sure everything is in
-            the correct order.
-          </p>
-
-          <p>
-            I keep most of my works to myself, but even for those I consider
-            presentable, only three have been performed. Though I may never write
-            music professionally, my wish is still to someday share the auditory
-            worlds I have dreamt of with anyone who is willing to listen.
-          </p>
         </div>
         <hr>
         <div>
