--- a/math/teaching.html
+++ b/math/teaching.html
@@ -44,6 +44,7 @@
               <a href="../music/piano.html">Piano</a>
               <a href="../music/composition.html">Composition</a>
               <a href="../music/arrangements.html">Arrangements</a>
+              <a href="../music/musicguesser.html">Music Guesser</a>
           </div>
         </div>
         <div class="dropdown">
@@ -52,10 +53,10 @@
               <a href="../other/resume.html">Resume</a>
               <a href="../other/writing.html">Writing</a>
               <a href="../other/gallery.html">Gallery</a>
-              <a href="../other/random.html">Random</a>
+              <a href="../other/news.html">News</a>
           </div>
-        </div>
-      </nav>
+      </div>
+  </nav>
     </header>
 
     <main>
