--- a/other/resume.html
+++ b/other/resume.html
@@ -52,6 +52,7 @@
                         <a href="../music/piano.html">Piano</a>
                         <a href="../music/composition.html">Composition</a>
                         <a href="../music/arrangements.html">Arrangements</a>
+                        <a href="../music/musicguesser.html">Music Guesser</a>
                     </div>
                 </div>
                 <div class="dropdown">
@@ -60,7 +61,7 @@
                         <a href="../other/resume.html">Resume</a>
                         <a href="../other/writing.html">Writing</a>
                         <a href="../other/gallery.html">Gallery</a>
-                        <a href="../other/random.html">Random</a>
+                        <a href="../other/news.html">News</a>
                     </div>
                 </div>
             </nav>
