removed h2 tag from text in news

--- a/other/news.html
+++ b/other/news.html
@@ -69,7 +69,7 @@
 
         <main>
             <h1>News</h1>
-            <h2>Here is a collection of news articles featuring me in some way!</h2>
+            Here is a collection of news articles featuring me in some way!
             <ul>
                 <li>
                     "<a
