--- a/other/gallery.html
+++ b/other/gallery.html
@@ -99,6 +99,7 @@
                         <a href="../other/writing.html">Writing</a>
                         <a href="../other/gallery.html">Gallery</a>
                         <a href="../other/news.html">News</a>
+                        <a href="../other/links.html">Links</a>
                     </div>
                 </div>
             </nav>
