--- a/other/links.html
+++ b/other/links.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Resume - Holden Mui</title>
+        <title>Links - Holden Mui</title>
         <link
             rel="icon"
             href="../files/images/turtleicon.png"
@@ -69,13 +69,17 @@
         </header>
 
         <main>
-            <h1>Resume</h1>
+            <h1>Links</h1>
             <p>
-                My academic resume is
-                <a href="../files/resume.pdf" , target="_blank">here</a>. My
-                music resume is
-                <a href="../files/musicresume.pdf" , target="_blank">here</a>.
+                Here are some places you can find me on the internet.
             </p>
+            <ul>
+                <li><a href="https://www.youtube.com/@theturtle1729" target="_blank">YouTube</a> – Piano performances and musical compositions</li>
+                <li><a href="https://open.spotify.com/artist/6tZXtNd20WbiCWMRJDqr58" target="_blank">Spotify</a> – Recordings of my works</li>
+                <li><a href="https://www.instagram.com/theturtle1729/" target="_blank">Instagram</a> – Personal photos and updates</li>
+                <li><a href="https://artofproblemsolving.com/community/user/286474" target="_blank">Art of Problem Solving</a> – Math blog and forum posts</li>
+                <li><a href="https://github.com/The-Turtle" target="_blank">GitHub</a> – Code and projects</li>
+            </ul>
         </main>
     </body>
 
